[gd_scene load_steps=8 format=2]

[ext_resource path="res://ASSETS/enemies/level2_1/wehicle/wehicle2.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/enemies/level2_1/wehicle/wehicle1.png" type="Texture" id=2]
[ext_resource path="res://enemy/level2_1/Vehicle.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 125.22

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 129.903
height = 949.4

[sub_resource type="CapsuleShape2D" id=4]
radius = 66.1923
height = 103.461

[node name="Vehicle" type="KinematicBody2D"]
rotation = -0.436332
collision_layer = 0
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.71963, -25.3717 )
scale = Vector2( 10.3667, 10.3667 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="player_checker" type="Area2D" parent="."]
rotation = -0.349066
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_checker"]
position = Vector2( -476.049, -1.30951 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="damage_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_checker"]
position = Vector2( -92.7903, 9.69331 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="slow_animation" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="player_checker" to="." method="_on_player_checker_body_entered"]
[connection signal="body_entered" from="damage_checker" to="." method="_on_damage_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="slow_animation" to="." method="_on_slow_animation_timeout"]
